--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@
 
     <footer class="footer">
         <div class="container">
+
+            <!-- Контакты -->
             <div>
                 <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
                 <address>
@@ -343,6 +345,7 @@
                 </address>
             </div>
 
+            <!-- Присоединяйтесь -->
             <div class="join-us">
                 <h3 class="join-title">присоединяйтесь</h3>
                 <ul class="join social-links">
@@ -375,6 +378,16 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- Подпишитесь на рассылку -->
+            <div class="sign">
+                <form>
+                    <label for="mail">Подпишитесь на рассылку</label>
+                    <input type="email" name="mail" id="mail"/>
+                    <button class="sign-btn" type="submit">Подписаться</button>
+                </form>
+
+            </div>
         </div>
     </footer>
 
@@ -386,6 +399,24 @@
                 <use href="./images/icons.svg#close"></use>    
                 </svg>
             </button>
+
+            <form>
+                <p>Оставьте свои данные, мы вам перезвоним</p>
+                
+                <label for="">Имя</label>
+                <input type="name">
+
+                <label for="">Телефон</label>
+                <input type="tel">
+
+                <label for="">Почта</label>
+                <input type="email">
+
+                <label for="">Комментарий</label>
+                <input type="text">
+
+                <button type="submit">Отправить</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
