--- a/index.html
+++ b/index.html
@@ -382,11 +382,11 @@
             <!-- Подпишитесь на рассылку -->
             <div class="sign">
                 <form>
-                    <label for="mail">Подпишитесь на рассылку</label>
+                    <p>Подпишитесь на рассылку</p>
+                    <label for="mail"></label>
                     <input type="email" name="mail" id="mail"/>
                     <button class="sign-btn" type="submit">Подписаться</button>
                 </form>
-
             </div>
         </div>
     </footer>
@@ -403,18 +403,18 @@
             <form>
                 <p>Оставьте свои данные, мы вам перезвоним</p>
                 
-                <label for="">Имя</label>
-                <input type="name">
+                <label for="name">Имя</label>
+                <input type="name" name="name" id="name"> 
 
                 <label for="">Телефон</label>
-                <input type="tel">
+                <input type="tel"  name="tel" id="tel">
 
-                <label for="">Почта</label>
-                <input type="email">
+                <label for="sign-mail">Почта</label>
+                <input type="email" name="mail" id="sign-mail"/>
 
-                <label for="">Комментарий</label>
-                <input type="text">
-
+                <label for="comment">Комментарий</label>
+                <input type="text" name="mail" id="comment"/>
+            
                 <button type="submit">Отправить</button>
             </form>
         </div>
