--- a/index.html
+++ b/index.html
@@ -384,8 +384,12 @@
                 <form>
                     <p>Подпишитесь на рассылку</p>
                     <label for="mail"></label>
-                    <input type="email" name="mail" id="mail"/>
-                    <button class="sign-btn" type="submit">Подписаться</button>
+                    <input type="email" name="mail" id="mail" placeholder="E-mail"/>
+                    <button class="sign-btn" type="submit">Подписаться 
+                        <svg class="sign-icon" width="24px" height="24px">
+                        <use href="./images/icons.svg#sign"></use> 
+                    </svg></button>
+                    
                 </form>
             </div>
         </div>
