style modal form

--- a/index.html
+++ b/index.html
@@ -405,20 +405,20 @@
             </button>
 
             <form>
-                <p>Оставьте свои данные, мы вам перезвоним</p>
+                <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
                 
                 <label for="name">Имя</label>
                 <input type="name" name="name" id="name"> 
 
-                <label for="">Телефон</label>
+                <label for="tel">Телефон</label>
                 <input type="tel"  name="tel" id="tel">
 
                 <label for="sign-mail">Почта</label>
                 <input type="email" name="mail" id="sign-mail"/>
 
                 <label for="comment">Комментарий</label>
-                <input type="text" name="mail" id="comment"/>
-            
+                <input type="text" name="mail" id="comment" placeholder="Введите текст"/>
+               <p> Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a> </p>
                 <button class="btn" type="submit">Отправить</button>
             </form>
         </div>
