end sign, not end modal

--- a/index.html
+++ b/index.html
@@ -417,8 +417,10 @@
                 <input type="email" name="mail" id="sign-mail"/>
 
                 <label for="comment">Комментарий</label>
-                <input type="text" name="mail" id="comment" placeholder="Введите текст"/>
-               <p> Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a> </p>
+                <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
+                
+                <input type="checkbox" name="agree" id="agree"> 
+                <label  class="agree" for="agree">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
                 <button class="btn" type="submit">Отправить</button>
             </form>
         </div>
