--- a/index.html
+++ b/index.html
@@ -419,8 +419,11 @@
                 <label for="comment">Комментарий</label>
                 <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
                 
-                <input type="checkbox" name="agree" id="agree"> 
+            <div class="agree-check">
+                <input  class="agree" type="checkbox" name="agree" id="agree"> 
                 <label  class="agree" for="agree">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
+            </div>
+
                 <button class="btn" type="submit">Отправить</button>
             </form>
         </div>
