--- a/index.html
+++ b/index.html
@@ -420,6 +420,9 @@
                 <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
                 
             <div class="agree-check">
+                <svg width="16px" height="15px">
+                    <use href="./images/icons.svg#check"></use>
+                </svg>
                 <input  class="agree" type="checkbox" name="agree" id="agree"> 
                 <label  class="agree" for="agree">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
             </div>
