--- a/index.html
+++ b/index.html
@@ -434,13 +434,14 @@
                 <label for="comment">Комментарий</label>
                 <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
                 
-            <div class="agree-check">
-                <svg width="16px" height="15px">
-                    <use href="./images/icons.svg#check"></use>
-                </svg>
-                <input  class="agree" type="checkbox" name="agree" id="agree"> 
-                <label  class="agree" for="agree">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
-            </div>
+                <label  class="agree" for="agree">
+                    <input class="agree-check visually-hidden" type="checkbox" name="agree" id="agree"> 
+                    <svg class="check-icon" width="16px" height="15px">
+                        <use href="./images/icons.svg#check"></use>
+                    </svg>
+                    Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>    
+                </label>
+            
 
                 <button class="btn" type="submit">Отправить</button>
             </form>
