--- a/portfolio.html
+++ b/portfolio.html
@@ -217,6 +217,20 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- Подпишитесь на рассылку -->
+            <div class="sign">
+                <p class="sign-title">Подпишитесь на рассылку</p>
+                <form>
+                    <label for="mail"></label>
+                    <input type="email" name="mail" id="mail" placeholder="E-mail"/>
+                    <button class="btn" type="submit">Подписаться
+                        <svg class="sign-icon" width="24px" height="24px">
+                        <use href="./images/icons.svg#sign"></use> 
+                    </svg></button>
+                    
+                </form>
+            </div>
         </div>
     </footer>
     
