--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
                 
                 <label  class="agree" for="agree">
-                    <input class="agree-check visually-hidden" type="checkbox" name="agree" id="agree"> 
+                    <input class="agree-check visually-hidden" type="checkbox" name="agree-check" id="agree"> 
                     <svg class="check-icon" width="16px" height="15px">
                         <use href="./images/icons.svg#check"></use>
                     </svg>
