--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 </ul>
             </nav>
                 <ul class="header-contacts">
-                    <li class="hd-contact">
+                    <li class="hd-contact-item">
                         <a href="mailto:info@devstudio.com">
                             <svg class="contact-icon" width="16px" height="12px">
                                 <use href="./images/icons.svg#mail"></use>
                             </svg>info@devstudio.com
                         </a>
                     </li>
-                    <li class="hd-contact"><a href="tel:+380961111111">
+                    <li class="hd-contact-item"><a href="tel:+380961111111">
                         <svg class="contact-icon" width="10px" height="16px">
                             <use href="./images/icons.svg#phone"></use>
                         </svg>+38 096 111 11 11</a>
@@ -399,7 +399,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button data-modal-close class="modal-close-btn">
-                <svg width="11px" height="11px" >
+                <svg class="close-icon" width="11px" height="11px" >
                 <use href="./images/icons.svg#close"></use>    
                 </svg>
             </button>
