--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
                   </ul>
              </nav>
                  <ul class="header-contacts">
-                     <li class="hd-contact">
+                     <li class="hd-contact-item">
                          <a href="mailto:info@devstudio.com">
                              <svg class="contact-icon" width="16px" height="12px">
                                  <use href="./images/icons.svg#mail"></use>
                              </svg>info@devstudio.com
                          </a>
                      </li>
-                     <li class="hd-contact"><a href="tel:+380961111111">
+                     <li class="hd-contact-item"><a href="tel:+380961111111">
                          <svg class="contact-icon" width="10px" height="16px">
                              <use href="./images/icons.svg#phone"></use>
                          </svg>+38 096 111 11 11</a>
